@@ -1,6 +1,9 @@
 3.N.N  - DD-MMM-2014
 ====================
 - Fixed some bugs in the new Makefile. [#63]
+- Fixed more messages of use of uninitialized values at fs.pm in lines 765 and
+  766. This mainly happens in OpenVZ VPS where '/proc/diskstats' file does not
+  exist.
 
 
 3.6.0  - 20-Aug-2014
